--- a/bugs/0e5d9290-c22e-4e11-a359-7200920bb5c2/c012360d-3277-48f7-a0c7-06146524bc76/index.html
+++ b/bugs/0e5d9290-c22e-4e11-a359-7200920bb5c2/c012360d-3277-48f7-a0c7-06146524bc76/index.html
@@ -12,14 +12,14 @@
       
 <p class="backlink"><a href="../../index.html">Back to Active Index</a></p>
 <p class="backlink"><a href="../../index_by_target.html">Back to Target Index</a></p>
-<h1>Bug: 0e5/86d</h1>
+<h1>Bug: 0e5/c01</h1>
 
 <table>
   <tbody>
     <tr><td class="bug_detail_label">ID :</td>
-        <td class="bug_detail">86d30e35-2541-4b1b-ac62-d39dd37e70fb</td></tr>
+        <td class="bug_detail">c012360d-3277-48f7-a0c7-06146524bc76</td></tr>
     <tr><td class="bug_detail_label">Short name :</td>
-        <td class="bug_detail">0e5/86d</td></tr>
+        <td class="bug_detail">0e5/c01</td></tr>
     <tr><td class="bug_detail_label">Status :</td>
         <td class="bug_detail">open</td></tr>
     <tr><td class="bug_detail_label">Severity :</td>
@@ -27,14 +27,14 @@
     <tr><td class="bug_detail_label">Assigned :</td>
         <td class="bug_detail"></td></tr>
     <tr><td class="bug_detail_label">Reporter :</td>
-        <td class="bug_detail">Yannick Roehlly &lt;yannick.roehlly@oamp.fr&gt;</td></tr>
+        <td class="bug_detail">Yannick Roehlly &lt;yannick@iaora.eu&gt;</td></tr>
     <tr><td class="bug_detail_label">Creator :</td>
-        <td class="bug_detail">Yannick Roehlly &lt;yannick.roehlly@oamp.fr&gt;</td></tr>
+        <td class="bug_detail">Yannick Roehlly &lt;yannick@iaora.eu&gt;</td></tr>
     <tr><td class="bug_detail_label">Created :</td>
-        <td class="bug_detail">Tue, 03 Dec 2013 16:45:12 +0000</td></tr>
+        <td class="bug_detail">Wed, 29 Jan 2014 14:21:27 +0000</td></tr>
 
     <tr><td class="bug_detail_label">Summary :</td>
-        <td class="bug_detail">Code IGM effect module.</td></tr>
+        <td class="bug_detail">Change how redshit and fluxes are managed</td></tr>
   </tbody>
 </table>
 
@@ -43,7 +43,7 @@
 
 
 
-<div class="comment root" id="Cbc9c141f-6d31-4746-8968-22395327a443">
+<div class="comment root" id="Cbd796c27-e270-46a4-8cd8-01026818497f">
 
 <table>
   <tbody>
@@ -51,14 +51,21 @@
       <td class="bug_comment_label">Comment:</td>
       <td class="bug_comment">
         --------- Comment ---------<br/>
-        ID: bc9c141f-6d31-4746-8968-22395327a443<br/>
-        Short name: 0e5/86d/bc9<br/>
-        From: Yannick Roehlly &lt;yannick.roehlly@oamp.fr&gt;<br/>
-        Date: Tue, 03 Dec 2013 16:45:30 +0000<br/>
+        ID: bd796c27-e270-46a4-8cd8-01026818497f<br/>
+        Short name: 0e5/c01/bd7<br/>
+        From: Yannick Roehlly &lt;yannick@iaora.eu&gt;<br/>
+        Date: Wed, 29 Jan 2014 14:30:46 +0000<br/>
         <br/>
         <pre>
-Make the IGM module only add the IGM effect and use the SED redshifting
-method.
+For now, the SED does not "know" its redshift (whether it was redshifted or
+not) and the redshift is given in parameter to the compute_fnu method. This
+makes thing uneasy for analysis modules like savefluxes if one wants to compute
+fluxes at various redshit because we had to hard code the redshift at which the
+flux is computed.
+* Make the redshift a SED attribute.
+* Make the compute_fnu use this redshift.
+* Change the analysis modules accordingly.
+
 
 </pre>
       </td>
